test/files/neg/t7110.check
t7110.scala:4: warning: A try without a catch or finally is equivalent to putting its body in a block; no exceptions are handled.
  try { ??? } // warn
  ^
1 warning
error: No warnings can be incurred under -Werror.
